# Energy-Sector-Agentic-vs-RAG-A-Comparative-Benchmark-Study

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: benchmark.yaml  benchmark_ablation_agentic_tools.yaml  benchmark_ablation_non_strict.yaml  benchmark_ablation_retrieval_modes.yaml  benchmark_ablation_strict_corpus.yaml  benchmark_agentic_enhanced.yaml  benchmark_complex_subset.yaml  benchmark_full.yaml  benchmark_full_all13.yaml  benchmark_full_enhanced.yaml  benchmark_full_grounded.yaml  benchmark_full_table_aware.yaml  benchmark_incremental_missing863.yaml  benchmark_live_smoke_tiny.yaml  benchmark_quantitative_only.yaml  benchmark_small_batch_50.yaml  benchmark_small_sample.yaml  benchmark_validation_metric_filtering.yaml
data/: readme.md
diagrams/: create_clean_diagrams.py
docs/: annotation_guide.md  complex_benchmark_guide.md  evaluation_protocol.md  findings_observations.md  research_questions.md
results/: BENCHMARK_SUMMARY.md  DETAILED_EXAMPLE_ANALYSIS.md  MAIN_BENCHMARK_COMPLETE_METRICS.json  MAIN_BENCHMARK_COMPLETE_WITH_CI.json  OPERATION_ANALYSIS_REPORT.md  benchmark_failures.json  dataset_analysis_deep_dive.json  dataset_analysis_report.json  dataset_analysis_selected_subset.json  quantitative_mismatch_analysis.json  re_evaluation_detailed.json  sanity_live_check.json  summary.json  summary.previous.json  wrapper_validation.json
scripts/: analyze_agentic_failures.py  analyze_mismatch.py  analyze_retrieval_domains.py  build_retrieval_corpus.py  check_metadata.py  compare_error_rates.py  compare_subset_full.py  (+38 more)
(+58 files in other folders)
